<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#b2d347"

    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".activities.PlayerProfileActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/my_icon"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:id="@+id/logout_player_profile_activity"
        android:textColor="#fd0303"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/player_profile"
        android:textSize="32sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="20dp"
        />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="6dp"
            android:src="@drawable/add_contact"
            android:id="@+id/player_profile_image_view"/>

        <ImageView
            android:src="@drawable/foto_rounded"
            android:layout_width="100dp"
            android:layout_height="100dp" />
    </FrameLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Full name "
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:id="@+id/full_name_player_profile_activity"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/ageP"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:id="@+id/age_player_profile_activity"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/location"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:id="@+id/location_player_profile_activity"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/player_level"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:id="@+id/level_player_profile_activity"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Male"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:id="@+id/gender_player_profile_activity"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/tap_for_phone_number"
        android:textColor="#f70a12"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:id="@+id/phone_player_profile_activity"/>



</LinearLayout>

</ScrollView>