<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#b2d347"
    tools:context=".activities.ProfileActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <ImageView
           android:layout_width="match_parent"
           android:layout_height="80dp"
           android:src="@drawable/my_icon"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:text="@string/profile"
           android:textSize="32sp"
           android:textColor="@color/textColor"
           android:layout_marginTop="30dp"
           />
       <ImageView
           android:layout_width="100dp"
           android:layout_height="100dp"
           android:src="@drawable/add_contact"
           android:id="@+id/profile_image_profile_activity"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <EditText
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:hint="@string/first_name"
                android:layout_margin="6dp"

                android:inputType="textPersonName"
                android:background="@drawable/rounded_corner"
                android:textColor="@color/textColor"

                android:id="@+id/first_name_edit_text_register_activity"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <EditText
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_margin="6dp"
                android:inputType="textPersonName"
                android:hint="@string/last_name"
                android:textColor="@color/textColor"
                android:background="@drawable/rounded_corner"
                android:id="@+id/last_name_edit_text_register_activity"/>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <EditText
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_margin="6dp"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:background="@drawable/rounded_corner"
                android:textColor="@color/textColor"
                android:id="@+id/tel_edit_text_register_activity"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <EditText
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:hint="@string/age"
                android:inputType="number"
                android:textColor="@color/textColor"
                android:layout_margin="6dp"
                android:background="@drawable/rounded_corner"
                android:id="@+id/age_edit_text_register_activity"/>
        </TableRow>



        <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_margin="6dp">
<!--
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/textColor"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:layout_marginTop="10dp" />
-->

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:gravity="center">

                <RadioButton android:id="@+id/radio_male_register_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_female_register_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/female"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>


        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center_horizontal">

            <Spinner
                android:id="@+id/level_spinner_register_activity"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:background="@drawable/spinner_rounded"
                />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center_horizontal"
            >

            <Spinner
                android:id="@+id/location_spinner_register_activity"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:background="@drawable/spinner_rounded"
                />

        </TableRow>


    </TableLayout>
       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="30dp"
           android:text="@string/register"
           android:background="@drawable/button"
           android:id="@+id/register_button_register_activity"
           />
       </LinearLayout>

</LinearLayout>

    </ScrollView>