<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/frame_layout">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor" >


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/scroll">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:id="@+id/by_name_layout"
            android:animateLayoutChanges="true">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:id="@+id/text_view_email_fragment_by_name"
                android:textColor="@color/textColor"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/my_icon"
                android:layout_marginTop="16px"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/search_by_name"
                android:textSize="32sp"
                android:textColor="@color/textColor"
                android:layout_marginTop="20dp"

                />

            <EditText
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_corner"
            android:layout_gravity="center_horizontal"

            android:hint="@string/first_name"
                android:textColorHint="@color/textColor"
                android:textColor="@color/textColor"
                android:singleLine="true"
                android:id="@+id/first_name_fragment_by_name"/>


            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/search"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:id="@+id/search_button_fragment_by_name"
                android:layout_gravity="center_horizontal"/>





        </LinearLayout>
    </ScrollView>

</RelativeLayout>

</FrameLayout>