<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".activities.ForgetPasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/my_icon"
        android:layout_marginTop="16px"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_password_lable"
        android:textSize="32sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/textColor"
        />



        <EditText
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:typeface="serif"
            android:hint="@string/enter_your_email"
            android:textColorHint="@color/textColor"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/textColor"
            android:id="@+id/email_address_forget_password_activity"/>


    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/create_new_password"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:id="@+id/create_password_button_forget_password_activity"/>
</LinearLayout>
</ScrollView>