<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor" >
    <!--
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Design Top Rated Screen"
            android:textSize="20dp"
            android:layout_centerInParent="true"/>
    -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:id="@+id/text_view_email_fragment_by_level"
                android:textColor="@color/textColor"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/my_icon"
                android:layout_marginTop="16px"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/search_by_level"
                android:textSize="32sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/textColor"
                />
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
<RelativeLayout>
                <Spinner

                    android:id="@+id/level_spinner_fragment_by_level"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="6dp"
                    android:textAlignment="center"

                    android:textColor="@color/textColor"
                    android:background="@drawable/spinner_rounded"
                    android:spinnerMode="dropdown"
                    android:dropDownVerticalOffset="40dp"
                    android:dropDownWidth="200dp"

                    />
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/down"
        android:layout_toEndOf="@id/level_spinner_fragment_by_level"
        android:layout_marginStart="-28dp"
        android:layout_marginTop="16dp"/>
</RelativeLayout>
            </TableRow>


            </TableLayout>
            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/search"
                android:layout_marginTop="60dp"
                android:background="@drawable/button"
                android:id="@+id/search_button_fragment_by_level"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>